[gd_scene load_steps=3 format=3 uid="uid://cpbn8h60hhit6"]

[ext_resource type="Script" path="res://scenes/ui/resource_tracker/resource_tracker_item/resource_tracker_item.gd" id="1_xdit4"]
[ext_resource type="PackedScene" uid="uid://b3awft3ugc6q3" path="res://scenes/component/tween/simple_tween/simple_tween.tscn" id="2_yqp0t"]

[node name="ResourceTrackerItem" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xdit4")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="AmountMarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="AmountLabel" type="Label" parent="HBoxContainer/AmountMarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 12
text = "item rare: 0
"

[node name="IncomeMarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2

[node name="IncomeLabel" type="Label" parent="HBoxContainer/IncomeMarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 12
text = "+1"

[node name="ModulateRedSimpleTween" parent="." node_paths=PackedStringArray("target") instance=ExtResource("2_yqp0t")]
unique_name_in_owner = true
target = NodePath("..")
duration = 0.5
call_method = "_modulate_red_simple_tween_method"
